force-app/main/default/objects/Case/fields/Child_Fields__c.field-meta.xml
<CustomField>
    <fullName>Child_Fields__c</fullName>
    <label>Child Fields</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Parent_Field__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>