force-app/main/default/objects/Case/fields/New_Fields__c.field-meta.xml
<CustomField>
    <fullName>New_Fields__c</fullName>
    <label>New Fields</label>
    <length>10</length>
    <type>Text</type>
</CustomField>