force-app/main/default/objects/Case/fields/Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field__c</fullName>
    <label>Parent Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>